Changelog :  - Global Fix of CTA size - center - remove arrow  - Rework of the call box part of the footer  - All fields are now squared (forms and ddl)  - RAQ and FYC RAQ fixed  - Put back icon where we need them in CTA  - Change all wofff to woff2 to keep format of font alignment

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base-b/less/new-design/components.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base-b/less/new-design/components.less
@@ -6,6 +6,7 @@
     padding: ~"@{nd-button-padding} !important";
         i {
             margin-right:0px !important;
+            display: none;
         }
 }
 
@@ -27,9 +28,10 @@
     font-weight: normal !important;
     padding: 11px 11px 9px 11px !important;
     line-height:14px;
-
+	min-width:auto;
     .thin i.fa.fa-lg.fa-angle-right {
         font-size: 17px !important;
+        display: none;
     }
 }
 .c-fyc-filter__button {
@@ -37,6 +39,7 @@
         height : 100%;
         i {
             line-height: 10px !important;
+            display: none;
         }
     }
 }
@@ -75,6 +78,7 @@
     i.fa.fa-lg.fa-angle-right {
         font-size: @nd-button-font-size+5;
         float: right;
+        display: none;
     }
 }
 
@@ -82,6 +86,7 @@
     font-size: @nd-button-font-size+5;
     float: right;
     line-height: 13.5px !important;
+    display: none;
     position: relative !important;
     top: 0 !important;
     transform: unset !important;
@@ -129,6 +134,7 @@
     font-size: ~"@{nd-button-font-size} !important";
     font-weight: normal !important;  
     line-height: 17px;
+    min-width:auto;
 }
 
 .c-suitelist__row-card .c-suitelist__button-card {
@@ -150,6 +156,7 @@
     top: 0 !important;
     transform: unset !important;
     vertical-align: -15% !important;
+    display: none;
         
         
 }
@@ -181,4 +188,19 @@
 
 .cc-tab_header_desc_cta a i, .cc-tab_header_desc_cta .btn i, .cc-tab_header_desc_cta a .btn i.fa-lg, .cc-tab_header_desc_cta .btn .btn i.fa-lg {
     padding-bottom: 2px;
+    display: none;
+}
+
+.form-control, .chosen-single, .chosen-results, .chosen-drop  {
+    border-radius: 0px !important;
+}
+
+.c-callbox__inner {
+    padding-top: 28px;
+    padding-bottom: 28px;
+}
+
+.c-mozaic .c-btn--slider--prev, .c-mozaic .c-btn--slider--next {
+    padding: 10px 12px;
+    border-radius:0px !important;
 }
